<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oubeichen.weather.AddAlarmActivity"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/alarm_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/alarm_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/alarm_name_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/condition_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/add_condition"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="90sp"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:onClick="addConditionClick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right" >

        <Button
            android:id="@+id/add_alarm_ok"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:text="@string/text_ok"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/add_alarm_cancel"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>